# Parcial1_Datos2

./: CMakeLists.txt  Ejemplo_lista.cpp  Ejemplo_objeto.cpp  ListaLigada.cpp  ListaLigada.h  Nodo.cpp  Nodo.h  Persona.cpp  Persona.h  generador.cpp  generador.h
